Fix league table on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,10 +20,6 @@
   text-decoration: line-through;
 }
 
-.past-games {
-  margin-top: 40px;
-}
-
 .team-image {
   max-width: 200px;
   max-height: 200px;
